[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Menus/AvisoPrealphaControl.gd" type="Script" id=1]
[ext_resource path="res://Sprites/EspecificosDeNivel/SplashScreen/Juliansoft_logo.png" type="Texture" id=2]
[ext_resource path="res://Objects/ProyectilSplashScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/LogoJuliansoftDestruido.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/EspecificosDeNivel/SplashScreen/Godot_logo.png" type="Texture" id=5]
[ext_resource path="res://Sprites/EspecificosDeNivel/SplashScreen/Estrella.png" type="Texture" id=6]
[ext_resource path="res://Sounds/Efectos/sfx_menu_select3.wav" type="AudioStream" id=7]
[ext_resource path="res://Fondos/PantallaTitulo/bg_pantallatitulo_no_logo.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Efectos/sfx_explosion_nuclear.wav" type="AudioStream" id=9]
[ext_resource path="res://Fonts/TTF/smalle.ttf" type="DynamicFontData" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 52.213

[sub_resource type="Animation" id=2]
resource_name = "anim_splash_screen_1"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("LogoJuliansoft:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Juliansoft" ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim_splash_screen_2"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("LogoGodot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Godot Engine" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "anim_splash_screen_3"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Estrella:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Estrella:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 474.178, -0.25, 0, 0.25, 0, 474.178, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 2.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Estrella:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 441.502, -0.25, 0, 1.49, 3.94797, 651, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 2.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Blanco:color:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.2, 3, 4, 8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Blanco:color:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.2, 3, 4, 8 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Blanco:color:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.2, 3, 4, 8 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Blanco:color:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.2, 3, 4, 8 )
}
tracks/7/type = "audio"
tracks/7/path = NodePath("AudioStreamPlayer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0, 1.6 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("PantallaTitulo:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 10 )

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 1 )
proyectil = ExtResource( 3 )
logoDestruido = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoJuliansoft" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 180 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LogoJuliansoft"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="LogoJuliansoft"]
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim_splash_screen_1"
anims/anim_splash_screen_1 = SubResource( 2 )
anims/anim_splash_screen_2 = SubResource( 3 )
anims/anim_splash_screen_3 = SubResource( 4 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 259.785
margin_right = 640.0
margin_bottom = 273.785
custom_fonts/font = SubResource( 5 )
text = "Juliansoft"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoGodot" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 180 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Estrella" type="Sprite" parent="."]
position = Vector2( 474.178, 441.502 )
texture = ExtResource( 6 )
offset = Vector2( -154.178, -351.502 )
hframes = 5

[node name="PantallaTitulo" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blanco" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Efectos"
[connection signal="area_entered" from="LogoJuliansoft" to="." method="_on_LogoJuliansoft_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
